Add sidebar container
Set sidebar container to 70%, change sidebar sections ratio

--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
     <div class="grid__container">
         <div class="header"></div>
         <div class="sidebar">
-            <div class="logo__container">
-                <div class="logo">#</div>
-                <div class="logo__name">Dashboard</div>
-            </div>
-            <div class="sidebar__primary">
-                <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks </li>
-                    <li>Communities</li>
-                </ul>
-            </div>
-            <div class="sidebar__secondary">
-                <ul>
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
-                </ul>
+            <div class="sidebar__container">
+                <div class="logo__container">
+                    <div class="logo">#</div>
+                    <div class="logo__name">Dashboard</div>
+                </div>
+                <div class="sidebar__primary">
+                    <ul>
+                        <li>Home</li>
+                        <li>Profile</li>
+                        <li>Messages</li>
+                        <li>History</li>
+                        <li>Tasks </li>
+                        <li>Communities</li>
+                    </ul>
+                </div>
+                <div class="sidebar__secondary">
+                    <ul>
+                        <li>Settings</li>
+                        <li>Support</li>
+                        <li>Privacy</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="main"></div>
