Set initial header section and content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 </head>
 <body>
     <div class="grid__container">
-        <div class="header"></div>
+        <div class="header">
+            <div class="header__container">
+                <div class="searchbar">
+                    <input type="search">
+                </div>
+                <div class="profile__nav">FERCIE CASERIA</div>
+                <div class="user__info">FERCIE CASERIA</div>
+                <div class="buttons">
+                    <buttton>New</buttton>
+                    <buttton>Upload</buttton>
+                    <buttton>Share</buttton>
+                </div>
+            </div>
+        </div>
         <div class="sidebar">
             <div class="sidebar__container">
                 <div class="logo__container">
