Set initial main layout

--- a/index.html
+++ b/index.html
@@ -47,7 +47,22 @@
                 </div>
             </div>
         </div>
-        <div class="main"></div>
+        <div class="main">
+            <div class="main__container">
+                <div class="project__container">
+                    <div class="heading">Your Projects</div>
+                    <div class="project__cards"></div>
+                </div>
+                <div class="announcement__container">
+                    <div class="heading">Announcements</div>
+                    <div class="announcement__card"></div>
+                </div>
+                <div class="trending__container">
+                    <div class="heading">Trending</div>
+                    <div class="trending__card"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
