--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <div class="header">
             <div class="header__container">
                 <div class="searchbar">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>magnify</title><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                    </svg>
                     <input type="search">
                 </div>
                 <div class="profile__nav">FERCIE CASERIA</div>
@@ -25,8 +27,8 @@
         <div class="sidebar">
             <div class="sidebar__container">
                 <div class="logo__container">
-                    <div class="logo">#</div>
-                    <div class="logo__name">Dashboard</div>
+                    <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>view-dashboard</title><path d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" /></svg>
+                    <div class="logo__name"><a href="">Dashboard</a></div>
                 </div>
                 <div class="sidebar__primary">
                     <ul>
