Designed user info

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
                     <img src="./luffy.png" alt="luffy">
                     <span>Fercie Caseria</span>
                 </div>
-                <div class="user__info">FERCIE CASERIA</div>
+                <div class="user__info">
+                    <img src="./luffy.png" alt="luffy">
+                    <div class="info">
+                        <span>Hi there,</span>
+                        <p>Fercie Caseria (@fercie19)</p>
+                    </div>
+                </div>
                 <div class="buttons">
                     <buttton>New</buttton>
                     <buttton>Upload</buttton>
