--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     </div>
                 </div>
                 <div class="buttons">
-                    <buttton>New</buttton>
-                    <buttton>Upload</buttton>
-                    <buttton>Share</buttton>
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
                 </div>
             </div>
         </div>
