Designed main side section

--- a/index.html
+++ b/index.html
@@ -179,11 +179,59 @@
                 </div>
                 <div class="announcement__container">
                     <div class="heading">Announcements</div>
-                    <div class="announcement__card"></div>
+                    <div class="announcement__card">
+                        <h4>Site Maintenance</h4>
+                        <p>
+                            As discussed earlier, we cannot normally add extra empty spaces inside paragraphs. 
+                            However, we can use a certain HTML entity called non-breaking space to add extra 
+                            spaces. For example,
+                        </p>
+                        <h4>Community Share Day</h4>
+                        <p>
+                            As discussed earlier, we cannot normally add extra empty spaces inside paragraphs. 
+                            However, we can use a certain HTML entity called non-breaking space to add extra 
+                            spaces. For example,
+                        </p>
+                        <h4>Updated Privacy Policy</h4>
+                        <p>
+                            As discussed earlier, we cannot normally add extra empty spaces inside paragraphs. 
+                            However, we can use a certain HTML entity called non-breaking space to add extra 
+                            spaces. For example,
+                        </p>
+                    </div>
                 </div>
                 <div class="trending__container">
                     <div class="heading">Trending</div>
-                    <div class="trending__card"></div>
+                    <div class="trending__card">
+                        <div>
+                            <img src="./luffy.png" alt="">
+                            <div>
+                                <span>@sabo</span>
+                                <span>Fire Emperror</span>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./luffy.png" alt="">
+                            <div>
+                                <span>@shanks</span>
+                                <span>Strongest Haki User</span>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./luffy.png" alt="">
+                            <div>
+                                <span>@blackbeard</span>
+                                <span>I do not know</span>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./luffy.png" alt="">
+                            <div>
+                                <span>@kuzan</span>
+                                <span>Ice Ice baby</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
